--- a/facebook_crawler.ipynb
+++ b/facebook_crawler.ipynb
@@ -1642,6 +1642,7 @@
     "        try:\n",
     "            resp = json.loads(resp)\n",
     "        except:\n",
+    "            print('Error at josn.load stage.')\n",
     "            return resp\n",
     "        soup = BeautifulSoup(resp['payload']['actions'][0]['html'])\n",
     "        reactions = re.findall('\\(new \\(require\\(\"ServerJS\"\\)\\)\\(\\)\\).handle\\((.*?)\\);', resp['payload']['actions'][2]['code'])[0]\n",
