Update sample scripts

--- a/sample/SampleScript.ipynb
+++ b/sample/SampleScript.ipynb
@@ -2143,6 +2143,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "56621c5b-ecb1-4774-8d3d-44baebb87a46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TimeStamp: 2022-01-05.\n",
+      "TimeStamp: 2022-01-05.\n",
+      "TimeStamp: 2022-01-05.\n",
+      "TimeStamp: 2022-01-05.\n",
+      "TimeStamp: 2022-01-05.\n",
+      "TimeStamp: 2022-01-05.\n",
+      "TimeStamp: 2022-01-05.\n",
+      "TimeStamp: 2022-01-05.\n",
+      "TimeStamp: 2022-01-05.\n",
+      "TimeStamp: 2022-01-05.\n",
+      "TimeStamp: 2022-01-05.\n",
+      "TimeStamp: 2022-01-04.\n",
+      "TimeStamp: 2022-01-04.\n",
+      "TimeStamp: 2022-01-04.\n",
+      "TimeStamp: 2022-01-04.\n",
+      "TimeStamp: 2022-01-04.\n",
+      "TimeStamp: 2022-01-04.\n",
+      "TimeStamp: 2022-01-04.\n",
+      "TimeStamp: 2022-01-04.\n",
+      "TimeStamp: 2022-01-04.\n",
+      "TimeStamp: 2022-01-04.\n",
+      "TimeStamp: 2022-01-04.\n",
+      "TimeStamp: 2022-01-03.\n",
+      "TimeStamp: 2022-01-03.\n",
+      "TimeStamp: 2022-01-03.\n",
+      "TimeStamp: 2022-01-03.\n",
+      "TimeStamp: 2022-01-03.\n",
+      "TimeStamp: 2022-01-03.\n",
+      "TimeStamp: 2022-01-03.\n",
+      "TimeStamp: 2022-01-03.\n",
+      "TimeStamp: 2022-01-03.\n",
+      "TimeStamp: 2022-01-03.\n",
+      "TimeStamp: 2022-01-03.\n",
+      "TimeStamp: 2022-01-02.\n",
+      "TimeStamp: 2022-01-02.\n",
+      "TimeStamp: 2022-01-02.\n",
+      "TimeStamp: 2022-01-02.\n",
+      "TimeStamp: 2022-01-02.\n",
+      "TimeStamp: 2022-01-02.\n",
+      "TimeStamp: 2022-01-02.\n",
+      "TimeStamp: 2022-01-02.\n",
+      "TimeStamp: 2022-01-01.\n",
+      "TimeStamp: 2022-01-01.\n",
+      "TimeStamp: 2022-01-01.\n",
+      "TimeStamp: 2022-01-01.\n",
+      "TimeStamp: 2022-01-01.\n",
+      "TimeStamp: 2022-01-01.\n",
+      "TimeStamp: 2022-01-01.\n",
+      "TimeStamp: 2021-12-31.\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "You are trying to merge on object and int64 columns. If you wish to proceed you should use pd.concat",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_7380/4089422105.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfacebook_crawler\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mgroupurl\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'https://www.facebook.com/groups/934234496602432'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfacebook_crawler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCrawl_GroupPosts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgroupurl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muntil_date\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'2022-01-01'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/github/envs/env/lib/python3.8/site-packages/facebook_crawler.py\u001b[0m in \u001b[0;36mCrawl_GroupPosts\u001b[0;34m(groupurl, until_date)\u001b[0m\n\u001b[1;32m    214\u001b[0m     \u001b[0mfeedback_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeedback_df\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'POSTID'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'COMMENTCOUNT'\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0;34m'SHARECOUNT'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'LIKECOUNT'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    215\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 216\u001b[0;31m     \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmerge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mleft\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcontent_df\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mright\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfeedback_df\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhow\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'left'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mon\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'POSTID'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    217\u001b[0m     \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'UPDATETIME'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrftime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"%Y-%m-%d %H:%M:%S\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    218\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/github/envs/env/lib/python3.8/site-packages/pandas/core/reshape/merge.py\u001b[0m in \u001b[0;36mmerge\u001b[0;34m(left, right, how, on, left_on, right_on, left_index, right_index, sort, suffixes, copy, indicator, validate)\u001b[0m\n\u001b[1;32m    104\u001b[0m     \u001b[0mvalidate\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m \u001b[0;34m|\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    105\u001b[0m ) -> DataFrame:\n\u001b[0;32m--> 106\u001b[0;31m     op = _MergeOperation(\n\u001b[0m\u001b[1;32m    107\u001b[0m         \u001b[0mleft\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    108\u001b[0m         \u001b[0mright\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/github/envs/env/lib/python3.8/site-packages/pandas/core/reshape/merge.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, left, right, how, on, left_on, right_on, axis, left_index, right_index, sort, suffixes, copy, indicator, validate)\u001b[0m\n\u001b[1;32m    701\u001b[0m         \u001b[0;31m# validate the merge keys dtypes. We may need to coerce\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    702\u001b[0m         \u001b[0;31m# to avoid incompatible dtypes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 703\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_maybe_coerce_merge_keys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    704\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    705\u001b[0m         \u001b[0;31m# If argument passed to validate,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/github/envs/env/lib/python3.8/site-packages/pandas/core/reshape/merge.py\u001b[0m in \u001b[0;36m_maybe_coerce_merge_keys\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1254\u001b[0m                     \u001b[0minferred_right\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mstring_types\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0minferred_left\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mstring_types\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1255\u001b[0m                 ):\n\u001b[0;32m-> 1256\u001b[0;31m                     \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1257\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1258\u001b[0m             \u001b[0;31m# datetimelikes must match exactly\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: You are trying to merge on object and int64 columns. If you wish to proceed you should use pd.concat"
+     ]
+    }
+   ],
+   "source": [
+    "import facebook_crawler\n",
+    "groupurl = 'https://www.facebook.com/groups/934234496602432'\n",
+    "df = facebook_crawler.Crawl_GroupPosts(groupurl, until_date='2022-01-01')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "1c1ea0a5-b7bc-407d-b2db-940897c042fb",
    "metadata": {},
@@ -2166,7 +2250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
