Update sample scripts

--- a/sample/FansPages.ipynb
+++ b/sample/FansPages.ipynb
@@ -411,8 +411,440 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0045bec9-db09-43c2-afd7-13439ab0c19d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TimeStamp: 2022-01-01.\n",
+      "TimeStamp: 2021-06-04.\n",
+      "TimeStamp: 2021-03-08.\n",
+      "TimeStamp: 2020-12-11.\n",
+      "TimeStamp: 2020-10-07.\n",
+      "TimeStamp: 2020-07-19.\n",
+      "TimeStamp: 2020-05-10.\n",
+      "TimeStamp: 2020-02-14.\n",
+      "TimeStamp: 2019-12-25.\n",
+      "TimeStamp: 2019-11-16.\n",
+      "TimeStamp: 2019-08-23.\n",
+      "TimeStamp: 2019-06-06.\n",
+      "TimeStamp: 2019-03-20.\n",
+      "TimeStamp: 2018-12-27.\n",
+      "TimeStamp: 2018-09-01.\n",
+      "TimeStamp: 2017-12-29.\n",
+      "TimeStamp: 2017-06-26.\n",
+      "TimeStamp: 2016-12-11.\n",
+      "TimeStamp: 2016-05-15.\n",
+      "TimeStamp: 2016-04-05.\n",
+      "TimeStamp: 2016-03-12.\n",
+      "TimeStamp: 2016-02-06.\n",
+      "TimeStamp: 2016-01-03.\n",
+      "TimeStamp: 2015-11-28.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NAME</th>\n",
+       "      <th>TIME</th>\n",
+       "      <th>MESSAGE</th>\n",
+       "      <th>LINK</th>\n",
+       "      <th>PAGEID</th>\n",
+       "      <th>POSTID</th>\n",
+       "      <th>COMMENTCOUNT</th>\n",
+       "      <th>REACTIONCOUNT</th>\n",
+       "      <th>SHARECOUNT</th>\n",
+       "      <th>DISPLAYCOMMENTCOUNT</th>\n",
+       "      <th>ANGER</th>\n",
+       "      <th>DOROTHY</th>\n",
+       "      <th>HAHA</th>\n",
+       "      <th>LIKE</th>\n",
+       "      <th>LOVE</th>\n",
+       "      <th>SORRY</th>\n",
+       "      <th>SUPPORT</th>\n",
+       "      <th>TOTO</th>\n",
+       "      <th>WOW</th>\n",
+       "      <th>UPDATETIME</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>馬英九</td>\n",
+       "      <td>2022-01-01 08:00:56</td>\n",
+       "      <td>今天是中華民國一百一十一年元旦，清晨的氣溫很低，看著國旗在空中飄揚，心中交集著感謝與感慨之情...</td>\n",
+       "      <td>https://www.facebook.com/MaYingjeou/</td>\n",
+       "      <td>118250504903757</td>\n",
+       "      <td>4936286629766763</td>\n",
+       "      <td>1243.0</td>\n",
+       "      <td>38906.0</td>\n",
+       "      <td>403.0</td>\n",
+       "      <td>1022.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>38254.0</td>\n",
+       "      <td>458.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>157.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2022-01-05 23:16:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>馬英九</td>\n",
+       "      <td>2021-12-21 17:05:14</td>\n",
+       "      <td>冬至天氣冷颼颼，來一碗熱熱的燒湯圓 🤤 大家喜歡吃芝麻湯圓還是花生湯圓呢？ #冬至 #吃湯圓...</td>\n",
+       "      <td>https://www.facebook.com/MaYingjeou/</td>\n",
+       "      <td>118250504903757</td>\n",
+       "      <td>4893842230677870</td>\n",
+       "      <td>1047.0</td>\n",
+       "      <td>28432.0</td>\n",
+       "      <td>179.0</td>\n",
+       "      <td>844.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>27961.0</td>\n",
+       "      <td>325.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2022-01-05 23:16:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>馬英九</td>\n",
+       "      <td>2021-12-17 17:00:00</td>\n",
+       "      <td>公民投票是憲法賦予人民的權利 1218，穿得暖暖，出門投票！ #四個都同意人民最有利 #返鄉...</td>\n",
+       "      <td>https://www.facebook.com/MaYingjeou/</td>\n",
+       "      <td>118250504903757</td>\n",
+       "      <td>4874626962599397</td>\n",
+       "      <td>1883.0</td>\n",
+       "      <td>45037.0</td>\n",
+       "      <td>519.0</td>\n",
+       "      <td>1372.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>43941.0</td>\n",
+       "      <td>336.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>634.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>2022-01-05 23:16:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>馬英九</td>\n",
+       "      <td>2021-12-11 09:00:00</td>\n",
+       "      <td>公投前最後一個周末，你收到投票通知單了嗎？ 萊劑不是保健品 公投重新綁大選 三接興建傷藻礁⋯...</td>\n",
+       "      <td>https://www.facebook.com/MaYingjeou/</td>\n",
+       "      <td>118250504903757</td>\n",
+       "      <td>4846491325412961</td>\n",
+       "      <td>3254.0</td>\n",
+       "      <td>39639.0</td>\n",
+       "      <td>809.0</td>\n",
+       "      <td>1742.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>38702.0</td>\n",
+       "      <td>196.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>568.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>2022-01-05 23:16:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>馬英九</td>\n",
+       "      <td>2021-11-14 13:52:11</td>\n",
+       "      <td>鯉魚潭鐵三初體驗🏊‍♂️🚴‍♂️🏃‍♂️ 順利完賽💪💪💪 #2021年花蓮太平洋鐵人三項錦標...</td>\n",
+       "      <td>https://www.facebook.com/MaYingjeou/</td>\n",
+       "      <td>118250504903757</td>\n",
+       "      <td>4764707240258037</td>\n",
+       "      <td>2409.0</td>\n",
+       "      <td>73538.0</td>\n",
+       "      <td>501.0</td>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>72407.0</td>\n",
+       "      <td>557.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>292.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>222.0</td>\n",
+       "      <td>2022-01-05 23:16:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>475</th>\n",
+       "      <td>馬英九</td>\n",
+       "      <td>2015-10-19 18:10:33</td>\n",
+       "      <td>「六堆忠義祠」源於清康熙60年，六堆團練協助平定朱一貴起事，清廷興建了「西勢忠義亭」奉祀在戰...</td>\n",
+       "      <td>https://www.facebook.com/MaYingjeou/</td>\n",
+       "      <td>118250504903757</td>\n",
+       "      <td>1050731538322311</td>\n",
+       "      <td>1176.0</td>\n",
+       "      <td>21803.0</td>\n",
+       "      <td>316.0</td>\n",
+       "      <td>705.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>21801.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2022-01-05 23:16:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>476</th>\n",
+       "      <td>馬英九</td>\n",
+       "      <td>2015-10-12 18:07:34</td>\n",
+       "      <td></td>\n",
+       "      <td>https://www.facebook.com/MaYingjeou/</td>\n",
+       "      <td>118250504903757</td>\n",
+       "      <td>1047937641935034</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2022-01-05 23:16:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>477</th>\n",
+       "      <td>馬英九</td>\n",
+       "      <td>2015-10-11 13:40:25</td>\n",
+       "      <td></td>\n",
+       "      <td>https://www.facebook.com/MaYingjeou/</td>\n",
+       "      <td>118250504903757</td>\n",
+       "      <td>1047435965318535</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2022-01-05 23:16:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>478</th>\n",
+       "      <td>馬英九</td>\n",
+       "      <td>2015-10-10 14:08:46</td>\n",
+       "      <td>今天是民國104年國慶日，讓我們一起祝中華民國生日快樂！ 今年的國慶日，還有特別的意義。今年...</td>\n",
+       "      <td>https://www.facebook.com/MaYingjeou/</td>\n",
+       "      <td>118250504903757</td>\n",
+       "      <td>1047031385358993</td>\n",
+       "      <td>2219.0</td>\n",
+       "      <td>36765.0</td>\n",
+       "      <td>679.0</td>\n",
+       "      <td>1357.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>36761.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2022-01-05 23:16:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>479</th>\n",
+       "      <td>馬英九</td>\n",
+       "      <td>2015-10-09 19:58:31</td>\n",
+       "      <td>故宮博物院於民國14年的國慶日成立，今年是它的90歲生日。故宮成立後幾經波折，對日抗戰爆發後...</td>\n",
+       "      <td>https://www.facebook.com/MaYingjeou/</td>\n",
+       "      <td>118250504903757</td>\n",
+       "      <td>1046725805389551</td>\n",
+       "      <td>993.0</td>\n",
+       "      <td>14761.0</td>\n",
+       "      <td>306.0</td>\n",
+       "      <td>590.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14757.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2022-01-05 23:16:30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>480 rows × 20 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    NAME                 TIME  \\\n",
+       "0    馬英九  2022-01-01 08:00:56   \n",
+       "1    馬英九  2021-12-21 17:05:14   \n",
+       "2    馬英九  2021-12-17 17:00:00   \n",
+       "3    馬英九  2021-12-11 09:00:00   \n",
+       "4    馬英九  2021-11-14 13:52:11   \n",
+       "..   ...                  ...   \n",
+       "475  馬英九  2015-10-19 18:10:33   \n",
+       "476  馬英九  2015-10-12 18:07:34   \n",
+       "477  馬英九  2015-10-11 13:40:25   \n",
+       "478  馬英九  2015-10-10 14:08:46   \n",
+       "479  馬英九  2015-10-09 19:58:31   \n",
+       "\n",
+       "                                               MESSAGE  \\\n",
+       "0    今天是中華民國一百一十一年元旦，清晨的氣溫很低，看著國旗在空中飄揚，心中交集著感謝與感慨之情...   \n",
+       "1    冬至天氣冷颼颼，來一碗熱熱的燒湯圓 🤤 大家喜歡吃芝麻湯圓還是花生湯圓呢？ #冬至 #吃湯圓...   \n",
+       "2    公民投票是憲法賦予人民的權利 1218，穿得暖暖，出門投票！ #四個都同意人民最有利 #返鄉...   \n",
+       "3    公投前最後一個周末，你收到投票通知單了嗎？ 萊劑不是保健品 公投重新綁大選 三接興建傷藻礁⋯...   \n",
+       "4    鯉魚潭鐵三初體驗🏊‍♂️🚴‍♂️🏃‍♂️ 順利完賽💪💪💪 #2021年花蓮太平洋鐵人三項錦標...   \n",
+       "..                                                 ...   \n",
+       "475  「六堆忠義祠」源於清康熙60年，六堆團練協助平定朱一貴起事，清廷興建了「西勢忠義亭」奉祀在戰...   \n",
+       "476                                                      \n",
+       "477                                                      \n",
+       "478  今天是民國104年國慶日，讓我們一起祝中華民國生日快樂！ 今年的國慶日，還有特別的意義。今年...   \n",
+       "479  故宮博物院於民國14年的國慶日成立，今年是它的90歲生日。故宮成立後幾經波折，對日抗戰爆發後...   \n",
+       "\n",
+       "                                     LINK           PAGEID            POSTID  \\\n",
+       "0    https://www.facebook.com/MaYingjeou/  118250504903757  4936286629766763   \n",
+       "1    https://www.facebook.com/MaYingjeou/  118250504903757  4893842230677870   \n",
+       "2    https://www.facebook.com/MaYingjeou/  118250504903757  4874626962599397   \n",
+       "3    https://www.facebook.com/MaYingjeou/  118250504903757  4846491325412961   \n",
+       "4    https://www.facebook.com/MaYingjeou/  118250504903757  4764707240258037   \n",
+       "..                                    ...              ...               ...   \n",
+       "475  https://www.facebook.com/MaYingjeou/  118250504903757  1050731538322311   \n",
+       "476  https://www.facebook.com/MaYingjeou/  118250504903757  1047937641935034   \n",
+       "477  https://www.facebook.com/MaYingjeou/  118250504903757  1047435965318535   \n",
+       "478  https://www.facebook.com/MaYingjeou/  118250504903757  1047031385358993   \n",
+       "479  https://www.facebook.com/MaYingjeou/  118250504903757  1046725805389551   \n",
+       "\n",
+       "     COMMENTCOUNT  REACTIONCOUNT  SHARECOUNT  DISPLAYCOMMENTCOUNT  ANGER  \\\n",
+       "0          1243.0        38906.0       403.0               1022.0    5.0   \n",
+       "1          1047.0        28432.0       179.0                844.0   15.0   \n",
+       "2          1883.0        45037.0       519.0               1372.0   31.0   \n",
+       "3          3254.0        39639.0       809.0               1742.0   60.0   \n",
+       "4          2409.0        73538.0       501.0               2017.0   15.0   \n",
+       "..            ...            ...         ...                  ...    ...   \n",
+       "475        1176.0        21803.0       316.0                705.0    0.0   \n",
+       "476           NaN            NaN         NaN                  NaN    0.0   \n",
+       "477           NaN            NaN         NaN                  NaN    0.0   \n",
+       "478        2219.0        36765.0       679.0               1357.0    3.0   \n",
+       "479         993.0        14761.0       306.0                590.0    3.0   \n",
+       "\n",
+       "     DOROTHY  HAHA     LIKE   LOVE  SORRY  SUPPORT  TOTO    WOW  \\\n",
+       "0        NaN  22.0  38254.0  458.0    4.0    157.0   NaN    6.0   \n",
+       "1        NaN  64.0  27961.0  325.0    2.0     55.0   NaN   10.0   \n",
+       "2        NaN  63.0  43941.0  336.0   16.0    634.0   NaN   16.0   \n",
+       "3        NaN  78.0  38702.0  196.0   11.0    568.0   NaN   24.0   \n",
+       "4        NaN  41.0  72407.0  557.0    4.0    292.0   NaN  222.0   \n",
+       "..       ...   ...      ...    ...    ...      ...   ...    ...   \n",
+       "475      NaN   0.0  21801.0    2.0    0.0      0.0   NaN    0.0   \n",
+       "476      NaN   0.0      0.0    0.0    0.0      0.0   NaN    0.0   \n",
+       "477      NaN   0.0      0.0    0.0    0.0      0.0   NaN    0.0   \n",
+       "478      NaN   1.0  36761.0    0.0    0.0      0.0   NaN    0.0   \n",
+       "479      NaN   0.0  14757.0    1.0    0.0      0.0   NaN    0.0   \n",
+       "\n",
+       "              UPDATETIME  \n",
+       "0    2022-01-05 23:16:30  \n",
+       "1    2022-01-05 23:16:30  \n",
+       "2    2022-01-05 23:16:30  \n",
+       "3    2022-01-05 23:16:30  \n",
+       "4    2022-01-05 23:16:30  \n",
+       "..                   ...  \n",
+       "475  2022-01-05 23:16:30  \n",
+       "476  2022-01-05 23:16:30  \n",
+       "477  2022-01-05 23:16:30  \n",
+       "478  2022-01-05 23:16:30  \n",
+       "479  2022-01-05 23:16:30  \n",
+       "\n",
+       "[480 rows x 20 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import facebook_crawler\n",
+    "pageurl= 'https://www.facebook.com/MaYingjeou'\n",
+    "df = facebook_crawler.Crawl_PagePosts(pageurl=pageurl, until_date='2016-01-01')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5696cdfc-8f3a-47cd-a936-97112f077db4",
    "metadata": {},
    "outputs": [],
    "source": []
